# pbr

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
src/: cached_faidx.rs  lua_filter.rs  main.rs  processor.rs
test/: debug.bam  debug.bam.bai  debug.sam  simple_test.bam  simple_test.bam.bai  simple_test.fa  simple_test.fa.fai  test.bam.bai
