[package]
name = "pbr"
version = "0.2.0"
edition = "2021"
authors = ["Brent Pedersen"]
description = "pileups filtered with lua expressions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bio = "1.1.0"
clap = { version = "4.3.0", features = ["derive", "help"] }
mimalloc = "0.1.37"
mlua = { version = "0.10.3", features = ["luau", "send"] }
perbase = { git = "https://github.com/y9c/perbase", branch = "master" }
rust-htslib = { version = "0.43.1", features = ["static", "libdeflate"] }
rust-lapper = "1.1.0"

[profile.release]
#codegen-units=1
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.10.1"
